<resources>
    <string name="app_name">RateANiner</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_in_email">E-Mail Address</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="find_prof">Find a Professor</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="results_for">Results for</string>
    <string name="number_sign">#</string>
    <string name="rating">NOW RATING</string>
    <string name="class_label">Class:</string>
    <string name="workload">Workload:</string>
    <string name="title_activity_write_review">WriteReviewActivity</string>
    <string name="reading_amount">Amount of Reading:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="friendliness">Friendliness:</string>
    <string name="curves_grades">Curves Grades:</string>
    <string name="subject">Subject:</string>
    <string name="hint_email">UNCC E-mail</string>
    <string name="hint_password">Password</string>
    <string name="reset_message">Enter your e-mail address and a reset link will be sent.</string>
    <string name="birthday">Birthday</string>
    <string name="subject_accounting">Accounting</string>
    <string name="subject_administration_supervision">Administration Supervision</string>
    <string name="subject_aerospace">Aerospace Studies</string>
    <string name="subject_africana">Africana Studies</string>
    <string name="subject_american">American Studies</string>
    <string name="subject_anthropology">Anthropology</string>
    <string name="subject_arabic">Arabic</string>
    <string name="subject_architecture">Architecture</string>
    <string name="subject_art_academic_departmental">Art Academic Departmental</string>
    <string name="subject_art_education">Art Education</string>
    <string name="subject_art_history">Art History</string>
    <string name="subject_basic_foundation_studios">Basic Foundation Studios</string>
    <string name="subject_ceramics">Ceramics</string>
    <string name="subject_digital_media">Digital Media</string>
    <string name="subject_drawing">Drawing</string>
    <string name="subject_fibers">Fibers</string>
    <string name="subject_graphic_design">Graphic Design</string>
    <string name="subject_illustration">Illustration</string>
    <string name="subject_painting">Painting</string>
    <string name="subject_photography">Photography</string>
    <string name="subject_print_media">Print Media</string>
    <string name="subject_sculpture">Sculpture</string>
    <string name="subject_arts_architecture_honors">Arts Architecture Honors</string>
    <string name="subject_arts_sciences">Arts Sciences</string>
    <string name="subject_bioinformatics">Bioinformatics</string>
    <string name="subject_biology">Biology</string>
    <string name="subject_business_administration_phd">Business Administration PhD</string>
    <string name="subject_business_administration_ug">Business Administration UG</string>
    <string name="subject_business_law">Business Law</string>
    <string name="subject_chemistry">Chemistry</string>
    <string name="subject_child_family_development">Child Famiy Development</string>
    <string name="subject_chinese">Chinese</string>
    <string name="subject_civil__engineering">Civil Engineering</string>
    <string name="subject_civil__engineering_technology">Civil Engineering Technology</string>
    <string name="subject_communication_studies">Communication Studies</string>
    <string name="subject_computer_science">Computer Science</string>
    <string name="subject_construction_management">Construction Management</string>
    <string name="subject_counseling">Counseling</string>
    <string name="subject_criminal_justice">Criminal Justice</string>
    <string name="subject_curriculum_instruction">Curriculum Instruction</string>
    <string name="subject_dance">Dance</string>
    <string name="subject_data_science_analytics">Data_Science Analytics</string>
    <string name="subject_earth_sciences">Earth Sciences</string>
    <string name="subject_economics">Economics</string>
    <string name="subject_education_instructional_systems_technology">Education Instructional Systems Technology</string>
    <string name="subject_education">Education</string>
    <string name="subject_educational_research">Educational Research</string>
    <string name="subject_electrical_engineering_technology">Electrical Engineering Technology</string>
    <string name="subject_electrical_computer_engineering">Electrical Computer Engineering</string>
    <string name="subject_elementary_education">Elementary Education</string>
    <string name="subject_engineering">Engineering</string>
    <string name="subject_engineering_management">Engineering Management</string>
    <string name="subject_engineering_technology">Engineering Technology</string>
    <string name="subject_english">English</string>
    <string name="subject_english_language_training_institute">English Language Training Institute</string>
    <string name="subject_energy_electromechanical_systems">Enery Electromechanical Systems</string>
    <string name="subject_farsi">Farsi</string>
    <string name="subject_film_studies">Film Studies</string>
    <string name="subject_finance">Finance</string>
    <string name="subject_fire_protection_administration">Fire_Protection Administration</string>
    <string name="subject_francophone_ftudies">Francophone Studies</string>
    <string name="subject_french">French</string>
    <string name="subject_geography">Geography</string>
    <string name="subject_geology">Geology</string>
    <string name="subject_german">German</string>
    <string name="subject_gerontology">Gerontology</string>
    <string name="subject_graduate_school">Graduate School</string>
    <string name="subject_health_human_services">Health Human Services</string>
    <string name="subject_health_administration">Health Administration</string>
    <string name="subject_health_services_research">Health Services Research</string>
    <string name="subject_history">History</string>
    <string name="subject_health_care_informatic_program">Health Care Informatic Program</string>
    <string name="subject_holocaust_genocide_human_rights">Holocaust Genocide Human Rights</string>
    <string name="subject_information_technology">Information Technology</string>
    <string name="subject_infrastructure_environment_systems">Infrastructure Environment Systems</string>
    <string name="subject_interinstitutional_enrollment">Interinstitutional Enrollment</string>
    <string name="subject_international_business">International Business</string>
    <string name="subject_international_studies">International Studies</string>
    <string name="subject_italian">Italian</string>
    <string name="subject_japanese">Japanese</string>
    <string name="subject_journalism">Journalism</string>
    <string name="subject_k12_foreign_language_education">K12 Foreign Language Education</string>
    <string name="subject_kinesiology">Kinesiology</string>
    <string name="subject_language_translating">Language Translating</string>
    <string name="subject_languages_cultural_studies">Languages Cultural Studies</string>
    <string name="subject_latin_american_studies">Latin American Studies</string>
    <string name="subject_liberal_studies">Liberal Studies</string>
    <string name="subject_mba">MBA</string>
    <string name="subject_management">Management</string>
    <string name="subject_management_information_systems">Management Information Systems</string>
    <string name="subject_marketing">Marketing</string>
    <string name="subject_master_of_public_administration">Master of Public Administration</string>
    <string name="subject_master_of_liberal_studies">Master of Liberal Studies</string>
    <string name="subject_master_of_urban_design">Master of Urban Design</string>
    <string name="subject_mathematics">Mathematics</string>
    <string name="subject_mathematics_education">Mathematics Education</string>
    <string name="subject_mecahnical_engineering">Mechanical Engineering</string>
    <string name="subject_mecahnical_engineering_technology">Mechanical Engineering Technology</string>
    <string name="subject_meteorology">Meteorology</string>
    <string name="subject_middle_grades">Middle Grades</string>
    <string name="subject_middle_secondary_k12_education">Middle Secondary K12 Education</string>
    <string name="subject_military_science">Military Science</string>
    <string name="subject_music">Music</string>
    <string name="subject_music_education">Music Education</string>
    <string name="subject_music_performance">Music Perfomrance</string>
    <string name="subject_nanoscale_science">Nanoscale Science</string>
    <string name="subject_neurodiagnositcs_sleep_science">Neurodiagnostics Sleep Science</string>
    <string name="subject_nursing">Nursing</string>
    <string name="subject_anesthesia">Anesthesia</string>
    <string name="subject_nurse_practitioner">Nurse Practitioner</string>
    <string name="subject_nursing_practice">Nursing Practice</string>
    <string name="subject_rn_bsn_completion">RN BSN Completion</string>
    <string name="subject_operations_management">Operations Management</string>
    <string name="subject_operations_research">Operations Research</string>
    <string name="subject_optical_science_engineering">Optical Science Engineering</string>
    <string name="subject_organizational_science">Organizational Science</string>
    <string name="subject_philosophy">Philosophy</string>
    <string name="subject_physics">Physics</string>
    <string name="subject_political_science">Political Science</string>
    <string name="subject_portuguese">Portuguese</string>
    <string name="subject_psychology">Psychology</string>
    <string name="subject_public_health">Public Health</string>
    <string name="subject_public_policy">Public Policy</string>
    <string name="subject_reading_language_literacy">Reading Language Literacy</string>
    <string name="subject_real_estate">Real Estate</string>
    <string name="subject_religious_studies">Religious Studies</string>
    <string name="subject_respiratory_therapy">Respiratory Therapy</string>
    <string name="subject_russian">Russian</string>
    <string name="subject_secondary_education">Secondary Education</string>
    <string name="subject_social_work">Social Work</string>
    <string name="subject_sociology">Sociology</string>
    <string name="subject_software_information_systems">Software Information Systems</string>
    <string name="subject_spanish">Spanish</string>
    <string name="subject_special_education">Special Education</string>
    <string name="subject_special_elementary_education">Special Elementary Education</string>
    <string name="subject_statistics">Statistics</string>
    <string name="subject_systems_engineering">Systems Engineering</string>
    <string name="subject_teaching_esl">Teaching ESL</string>
    <string name="subject_theatre">Theatre</string>
    <string name="subject_university_college">University College</string>
    <string name="subject_university_honors">University Honors</string>
    <string name="subject_university_writing_program">University Writing Program</string>
    <string name="subject_urban_studies">Urban Studies</string>
    <string name="subject_washington_center_internship">Washington Center Internship</string>
    <string name="subject_womens_gender_studies">Womens Gender Studies</string>
</resources>