<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="wrap_content" 
	 android:layout_height="wrap_content"
	 android:orientation="vertical"
	 android:padding="6dp">
	 
	 <CheckBox android:id="@+id/checkBox1" android:layout_width="wrap_content"
	  android:layout_height="wrap_content" android:text="@string/subject_accounting"></CheckBox>
	 
	 <CheckBox android:id="@+id/checkBox2" android:layout_width="wrap_content"
	  android:layout_height="wrap_content" android:text="@string/subject_administration_supervision"></CheckBox>
	 
	 <CheckBox android:id="@+id/checkBox3" android:layout_width="wrap_content"
	  android:layout_height="wrap_content" android:text="@string/subject_aerospace"></CheckBox>
	 
	 <CheckBox android:id="@+id/checkBox4" android:layout_width="wrap_content"
	  android:layout_height="wrap_content" android:text="@string/subject_africana"></CheckBox>

</LinearLayout>